test/log.txt
warning: argument unused during compilation: '--shared' [-Wunused-command-line-argument]
In file included from src/foo.c:1:
/usr/include/stdio.h:33:11: fatal error: 'stddef.h' file not found
# include <stddef.h>
          ^~~~~~~~~~
1 error generated.
Error while processing /home/pavel/Downloads/llvm/tools/clang/tools/example/test/src/foo.c.

Found 109 functions.

pattern { DEFBEG_7
/home/pavel/Downloads/llvm/tools/clang/tools/example/test/src/foo.c**
/home/pavel/Downloads/llvm/tools/clang/tools/example/test/src/foo.c return found at offset223
pattern 	DRS7 
warning: argument unused during compilation: '--shared' [-Wunused-command-line-argument]
In file included from src/bar.c:1:
/usr/include/stdio.h:33:11: fatal error: 'stddef.h' file not found
# include <stddef.h>
          ^~~~~~~~~~
1 error generated.
Error while processing /home/pavel/Downloads/llvm/tools/clang/tools/example/test/src/bar.c.

Found 108 functions.

pattern { DEFBEG_7
/home/pavel/Downloads/llvm/tools/clang/tools/example/test/src/bar.c**
/home/pavel/Downloads/llvm/tools/clang/tools/example/test/src/bar.c return found at offset230
pattern  DRS7 
In file included from src/main.cpp:1:
/usr/include/stdio.h:33:11: fatal error: 'stddef.h' file not found
# include <stddef.h>
          ^~~~~~~~~~
1 error generated.
Error while processing /home/pavel/Downloads/llvm/tools/clang/tools/example/test/src/main.cpp.

Found 126 functions.

pattern { DEFBEG_7
/home/pavel/Downloads/llvm/tools/clang/tools/example/test/include/test.h**
pattern { DEFBEG_7
/home/pavel/Downloads/llvm/tools/clang/tools/example/test/include/test.h**
/home/pavel/Downloads/llvm/tools/clang/tools/example/test/include/test.h return found at offset156
pattern  DRS7 
/home/pavel/Downloads/llvm/tools/clang/tools/example/test/include/test.h return found at offset182
pattern  DRS7 
pattern { DEFBEG_7
/home/pavel/Downloads/llvm/tools/clang/tools/example/test/include/test.h**
/home/pavel/Downloads/llvm/tools/clang/tools/example/test/include/test.h return found at offset262
pattern  DRS7 
pattern { DEFBEG_7
/home/pavel/Downloads/llvm/tools/clang/tools/example/test/src/main.cpp**
/home/pavel/Downloads/llvm/tools/clang/tools/example/test/src/main.cpp return found at offset238
pattern  DRS7 
In file included from src/test.cpp:1:
/usr/include/stdio.h:33:11: fatal error: 'stddef.h' file not found
# include <stddef.h>
          ^~~~~~~~~~
1 error generated.
Error while processing /home/pavel/Downloads/llvm/tools/clang/tools/example/test/src/test.cpp.

Found 126 functions.

pattern { DEFBEG_7
/home/pavel/Downloads/llvm/tools/clang/tools/example/test/include/test.h**
pattern { DEFBEG_7
/home/pavel/Downloads/llvm/tools/clang/tools/example/test/include/test.h**
/home/pavel/Downloads/llvm/tools/clang/tools/example/test/include/test.h return found at offset156
pattern  DRS7 
/home/pavel/Downloads/llvm/tools/clang/tools/example/test/include/test.h return found at offset182
pattern  DRS7 
pattern { DEFBEG_7
/home/pavel/Downloads/llvm/tools/clang/tools/example/test/include/test.h**
/home/pavel/Downloads/llvm/tools/clang/tools/example/test/include/test.h return found at offset262
pattern  DRS7 
pattern { DEFBEG_7
/home/pavel/Downloads/llvm/tools/clang/tools/example/test/src/test.cpp**
/home/pavel/Downloads/llvm/tools/clang/tools/example/test/src/test.cpp return found at offset232
pattern 	DRS7 
gcc -fPIC --shared -o lib/libfoo.so src/foo.c -Iinclude 
gcc -fPIC --shared -o lib/libbar.so src/bar.c -Iinclude 
g++ -o test src/main.cpp src/test.cpp -Iinclude -Llib -lfoo -lbar -Wl,-rpath=lib 
